[tool.poetry]
name = "hw-youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["Anastasia Byalaya <barybka_jack_jack_kusto@vk.com>"]
readme = "README.md"
packages = [{include = "hw_youtube_analytics_project"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
flake8 = "^6.1.0"


[tool.poetry.group.lint.dependencies]
mypy = "^1.7.0"
black = "^23.11.0"
isort = "^5.12.0"

[tool.mypy]
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.black]
line-length = 119

[tool.isort]
line_length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
